css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif;
    box-sizing: border-box;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
}

.fa-solid {
    color: var(--main-color);
}

body {
    display: flex;
    justify-content: center;
    margin: 0;
}

button:hover, a:hover, .card:hover {
  transform: scale(1.01);
  transition: 0.2s;
  transition: all 0.2s ease-in-out;
}

/****** Header ***********/

header {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  height: 80px;
}

#header-logo {
  height: 20px;
  width: 60px;
  object-fit: contain;
  align-self:center;
}

.header-links {
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  margin: 0;
  gap: 4.5rem;
  height: 60%;
}

.header-links a {
  border-top: transparent 3px solid;
  height: 100%;
  display: flex;
  align-items: center;
}

.header-links a:hover {
  color: var(--main-color);
  border-top: var(--main-color) 3px solid;
}

/****** Nav ***********/

nav {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 35px;
}

nav p {
  margin-top: 0.5rem;
  margin-bottom: 0;
}

.search-area {
  display: flex;
  justify-content: flex-start;
}

.search-area input {
  border-top: var(--main-bg-color) 2px solid;
  border-bottom: var(--main-bg-color) 2px solid;
  border-left: none;
  border-right: none;
  font-size: 1.1rem;
  font-weight: bold;
  padding: 0 1.4rem;
  opacity: 1;
  width: 190px;
}

.search-area input::placeholder {
  opacity: 1;
}

.search-area button {
  font-size: 1.1rem;
  color: white;
  font-weight: bold;
  background-color: var(--main-color);
  padding: 0 1rem;
  border: none;
  border-bottom-right-radius: 15px;
  border-top-right-radius: 15px;
  cursor: pointer;
}

.fa-location-dot {
  color: black;
  background-color: var(--main-bg-color);
  width: 50px;
  height: 50px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-bottom-left-radius: 25%;
  border-top-left-radius: 25%;
  font-size: 1.3rem;
}

.filters {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 15px;
}

.filters p {
  margin: 0;
}

.filters, .filters button {
  font-size: 1rem;
  font-weight: bold;
}

.filters button {
  padding: 0.7rem 1.2rem;
  border: var(--main-bg-color) 3px solid;
  border-radius: 30px;
  background-color: white;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.filters button:hover {
  background-color: #DEEBFF;
}

.filters .fa-solid {
  width: 22px;
  height: 22px;
  margin-right: 0.7rem;
  display: flex;
  align-items: center;
  justify-content: center;
  object-fit: contain;
}

.search-result {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  margin-top: 0;
}

.search-result .fa-light {
  color: white;
  border: var(--main-bg-color) 3px solid;
  border-radius: 50%;
  background-color: var(--main-color);
  width: 25px;
  height: 25px;
  display: flex;
  align-items: center;
  justify-content: center;
}


/****** Main container ***********/

.main-container {
    width: 100%;
    max-width: 1440px;
    padding: 0 50px;
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    gap: 35px;
}

a {
    color: inherit;
    text-decoration: none;
}

.section-title {
    margin: 0;
    font-size: 22px;
}

.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.euro {
    font-weight: 700;
}

.neutral-star {
    color: var(--main-bg-color)
}

/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
    display: flex;
    justify-content: space-between;
}

.hebergements-and-populaires section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
    box-sizing: border-box;
}

/****** Hebergements ***********/
.hebergements {
    width: 65%;
}

.hebergements-cards-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  padding: 30px 0;
  gap: 30px;
}

.hebergements-cards-container a {
  width: 250px;
  height: 207px;
}

.card-hebergement {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 0.3rem;
  background-color: white;
  border-radius: 10px;
  width: 100%;
  height: 100%;
}


.card-hebergement h3, .card-hebergement p {
  margin: 0;
}

.afficher-plus {
  margin-top: 5px;
  margin-bottom: 0;
  cursor: pointer;
}

.card-hebergement img {
  height: 55%;
  width: 100%;
  object-fit: cover;
  border-top-right-radius: 7px;
  border-top-left-radius: 7px;
}

.card-hebergement .card-content {
  height: 42%;
  width: 95%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

/****** Populaires ***********/
.populaires {
    width: 32%;
}

.populaires-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.populaires-cards .card {
    display: flex;
    margin-top: 33px;
}

.populaires-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.populaires-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.populaires-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.populaires-cards .card-subtitle {
    margin: 0;
}

.populaires-cards .card-rating {
    margin-bottom: 5px;
}




/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */
@media (max-width: 1024px) {
    .hebergements-and-populaires {
        flex-direction: column;
    }

    .hebergements {
        width: 100%;
    }

    .populaires {
        width: 100%;
        margin-top: 50px;
    }

    .populaires-cards {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .populaires-cards a {
        width: 30%;
    }

    .populaires-cards .card-title {
        font-size: 14px;
    }

    .populaires-cards .card-subtitle {
        font-size: 13px;
    }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {
    /* ... */
}

